logs/mobility/build.make.089.log.stderr
/home/steven/rover_workspace/src/mobility/src/mobility.cpp: In function ‘void doDropOffControllerMovements()’:
/home/steven/rover_workspace/src/mobility/src/mobility.cpp:510:35: error: ‘class DropOffController’ has no member named ‘setCenterDist’
                 dropOffController.setCenterDist(hypot(origin.x - currentLocation.x, origin.y - currentLocation.y));
                                   ^
make[2]: *** [CMakeFiles/mobility.dir/src/mobility.cpp.o] Error 1
make[1]: *** [CMakeFiles/mobility.dir/all] Error 2
make: *** [all] Error 2
